# stock-analysis-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  covariables_series.json  fetch_covariables_to_sqlite.py  fetch_icolcap_to_sqlite.py  pyproject.toml  stock_data.db  ticker_names.json
cli_tools/: __init__.py  common.py  fundamentals.py  momentum.py  pivots.py  relative_moves.py
correlation-notebooks/: covariables_correlation.ipynb
notebooks/: geb_plot.ipynb  grubolivar_plot.ipynb  icolcap_plot.ipynb  pei_plot.ipynb  pfcibest_plot.ipynb  pfdavvnda_plot.ipynb  promigas_plot.ipynb
notebooks/others/: bvc_plot.ipynb  celsia_plot.ipynb  corficolcf_plot.ipynb  enka_plot.ipynb  etb_plot.ipynb  exito_plot.ipynb  grupoaval_plot.ipynb  hcolsel_plot.ipynb  mineros_plot.ipynb  nutresa_plot.ipynb  pfcemargos_plot.ipynb  pfcorficol_plot.ipynb  terpel_plot.ipynb
skills/correlation-ticker-db/: SKILL.md
skills/correlation-ticker-db/agents/: openai.yaml
skills/investing-colombia-10y-latest/: SKILL.md  package-lock.json  package.json
skills/ticker-db-store/: SKILL.md
stock-notebooks/: bhi_plot.ipynb  ecopetrol_plot.ipynb  geb_plot.ipynb  market_relative_moves.ipynb  pei_plot.ipynb  pfcibest_plot.ipynb  stock_momentum_dashboard.ipynb  terpel_plot.ipynb
stock-notebooks/others/: bbvacol_plot.ipynb  bogota_plot.ipynb  cemargos_plot.ipynb  cibest_plot.ipynb  conconcret_plot.ipynb  corficolcf_plot.ipynb  ecopetrol_plot.ipynb  enka_plot.ipynb  grupoargos_plot.ipynb  gruposura_plot.ipynb  isa_plot.ipynb  pfaval_plot.ipynb  pfgrupoarg_plot.ipynb  pfgrupsura_plot.ipynb
(+7 files in other folders)
